chore: reworked how sharing a wishlist works
