# src/api/middlewares.ts
@@ -3,6 +3,7 @@ import {CreateWishlistRequestSchema, UpdateWishlistRequestSchema, AddItemToWishl
 import {ImportWishlistRequestSchema} from './store/wishlists/import/validators'
 
 const customerAuth = authenticate('customer', ['session', 'bearer'])
+const optionalCustomerAuth = authenticate('customer', ['session', 'bearer'], {allowUnauthenticated: true})
 
 export default defineMiddlewares({
 	routes: [
@@ -10,11 +11,11 @@ export default defineMiddlewares({
 		{matcher: '/store/wishlists/:id/items', method: 'POST', middlewares: [customerAuth, validateAndTransformBody(AddItemToWishlistRequestSchema)]},
 		{matcher: '/store/wishlists', method: 'GET', middlewares: [customerAuth]},
 		{matcher: '/store/wishlists/:id', method: 'PUT', middlewares: [customerAuth, validateAndTransformBody(UpdateWishlistRequestSchema)]},
-		{matcher: '/store/wishlists/:id', method: ['GET', 'DELETE'], middlewares: [customerAuth]},
-		{matcher: '/store/wishlists/:id/items', method: 'GET', middlewares: [customerAuth]},
+		{matcher: '/store/wishlists/:id', method: 'GET', middlewares: [optionalCustomerAuth]},
+		{matcher: '/store/wishlists/:id', method: 'DELETE', middlewares: [customerAuth]},
+		{matcher: '/store/wishlists/:id/items', method: 'GET', middlewares: [optionalCustomerAuth]},
 		{matcher: '/store/wishlists/:id/items/:product_id', method: 'DELETE', middlewares: [customerAuth]},
 		{matcher: '/store/wishlists/:id/transfer', method: 'POST', middlewares: [customerAuth]},
-		{matcher: '/store/wishlists/:id/share', method: 'POST', middlewares: [customerAuth]},
 		{matcher: '/store/wishlists/import', method: 'POST', middlewares: [customerAuth, validateAndTransformBody(ImportWishlistRequestSchema)]},
 		{matcher: '/store/wishlists/total-items-count', method: 'GET', middlewares: [customerAuth]},
 		// Admin
